--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -7,12 +7,20 @@
       "value": 1
     },
     {
-      "name": "Enemy",
-      "value": 2
-    },
-    {
       "name": "Bullet",
       "value": 4
+    },
+    {
+      "name": "Enemy",
+      "value": 16
     }
-  ]
+  ],
+  "physics": {
+    "collisionGroups": [],
+    "collisionMatrix": {
+      "0": 1,
+      "1": 4,
+      "2": 2
+    }
+  }
 }
