--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -31,5 +31,11 @@
       "1": 7,
       "2": 2
     }
+  },
+  "general": {
+    "designResolution": {
+      "width": 1280,
+      "height": 720
+    }
   }
 }
