--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -35,7 +35,8 @@
   "general": {
     "designResolution": {
       "width": 1280,
-      "height": 720
+      "height": 720,
+      "fitHeight": true
     }
   }
 }
