add skills mananger

--- a/assets/resources/database/configs/game_config.json
+++ b/assets/resources/database/configs/game_config.json
@@ -78,5 +78,10 @@
                 "damage": 25
             }
         }
+    },
+    "Prefabs": {
+        "Skills": {
+            "Sword": "Prefabs/Skills/Sword/SpawnSword"
+        }
     }
 }
