--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -13,6 +13,10 @@
     {
       "name": "Enemy",
       "value": 2
+    },
+    {
+      "name": "Pickup",
+      "value": 8
     }
   ],
   "physics": {
@@ -27,9 +31,10 @@
       }
     ],
     "collisionMatrix": {
-      "0": 3,
+      "0": 7,
       "1": 7,
-      "2": 2
+      "2": 3,
+      "3": 0
     }
   },
   "general": {
